remove api route from urlshortener
