# docs/swagger.json
@@ -52,218 +52,6 @@
                 }
             }
         },
-        "/api/v1/shortlink/{shortlink}": {
-            "get": {
-                "description": "get a shortlink",
-                "produces": [
-                    "text/plain",
-                    "application/json"
-                ],
-                "tags": [
-                    "api/v1/"
-                ],
-                "summary": "get a shortlink",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "example": "home",
-                        "description": "the shortlink URL part (shortlink id)",
-                        "name": "shortlink",
-                        "in": "path"
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Success",
-                        "schema": {
-                            "$ref": "#/definitions/controller.ShortLink"
-                        }
-                    },
-                    "404": {
-                        "description": "NotFound",
-                        "schema": {
-                            "type": "integer"
-                        }
-                    },
-                    "500": {
-                        "description": "InternalServerError",
-                        "schema": {
-                            "type": "integer"
-                        }
-                    }
-                }
-            },
-            "put": {
-                "description": "update a new shortlink",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "text/plain",
-                    "application/json"
-                ],
-                "tags": [
-                    "api/v1/"
-                ],
-                "summary": "update existing shortlink",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "example": "home",
-                        "description": "the shortlink URL part (shortlink id)",
-                        "name": "shortlink",
-                        "in": "path",
-                        "required": true
-                    },
-                    {
-                        "description": "shortlink spec",
-                        "name": "spec",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/v1alpha1.ShortLinkSpec"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Success",
-                        "schema": {
-                            "type": "integer"
-                        }
-                    },
-                    "404": {
-                        "description": "NotFound",
-                        "schema": {
-                            "type": "integer"
-                        }
-                    },
-                    "500": {
-                        "description": "InternalServerError",
-                        "schema": {
-                            "type": "integer"
-                        }
-                    }
-                }
-            },
-            "post": {
-                "description": "create a new shortlink",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "text/plain",
-                    "application/json"
-                ],
-                "tags": [
-                    "api/v1/"
-                ],
-                "summary": "create new shortlink",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "example": "home",
-                        "description": "the shortlink URL part (shortlink id)",
-                        "name": "shortlink",
-                        "in": "path"
-                    },
-                    {
-                        "description": "shortlink spec",
-                        "name": "spec",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/v1alpha1.ShortLinkSpec"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Success",
-                        "schema": {
-                            "type": "integer"
-                        }
-                    },
-                    "301": {
-                        "description": "MovedPermanently",
-                        "schema": {
-                            "type": "integer"
-                        }
-                    },
-                    "302": {
-                        "description": "Found",
-                        "schema": {
-                            "type": "integer"
-                        }
-                    },
-                    "307": {
-                        "description": "TemporaryRedirect",
-                        "schema": {
-                            "type": "integer"
-                        }
-                    },
-                    "308": {
-                        "description": "PermanentRedirect",
-                        "schema": {
-                            "type": "integer"
-                        }
-                    },
-                    "404": {
-                        "description": "NotFound",
-                        "schema": {
-                            "type": "integer"
-                        }
-                    },
-                    "500": {
-                        "description": "InternalServerError",
-                        "schema": {
-                            "type": "integer"
-                        }
-                    }
-                }
-            },
-            "delete": {
-                "description": "delete shortlink",
-                "produces": [
-                    "text/plain",
-                    "application/json"
-                ],
-                "tags": [
-                    "api/v1/"
-                ],
-                "summary": "delete shortlink",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "example": "home",
-                        "description": "the shortlink URL part (shortlink id)",
-                        "name": "shortlink",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Success",
-                        "schema": {
-                            "type": "integer"
-                        }
-                    },
-                    "404": {
-                        "description": "NotFound",
-                        "schema": {
-                            "type": "integer"
-                        }
-                    },
-                    "500": {
-                        "description": "InternalServerError",
-                        "schema": {
-                            "type": "integer"
-                        }
-                    }
-                }
-            }
-        },
         "/{shortlink}": {
             "get": {
                 "description": "redirect to target as per configuration of the shortlink",
