# pkg/router/router.go
@@ -50,15 +50,7 @@ func NewGinGonicHTTPServer(setupLog *logr.Logger, bindAddr string) (*gin.Engine,
 }
 
 func Load(router *gin.Engine, shortlinkController *urlShortenerController.ShortlinkController) {
-	router.GET("/:shortlink", shortlinkController.HandleShortLink)
-
-	v1 := router.Group("/api/v1")
-	{
-		v1.GET("/shortlink/", shortlinkController.HandleListShortLink)
-		v1.GET("/shortlink/:shortlink", shortlinkController.HandleGetShortLink)
-		v1.POST("/shortlink/:shortlink", shortlinkController.HandleCreateShortLink)
-		v1.PUT("/shortlink/:shortlink", shortlinkController.HandleUpdateShortLink)
-		v1.DELETE("/shortlink/:shortlink", shortlinkController.HandleDeleteShortLink)
-	}
 	router.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
+
+	router.GET("/:shortlink", shortlinkController.HandleShortLink)
 }
